<resources>
    <string name="app_name">NYTimesSearch</string>

    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="action_search_settings">Search Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="search_hint">Search...</string>
    <string name="search_button">Search</string>

    <string name="title_activity_article">Article Activity</string>
    <string name="title_activity_search">News Article Search</string>

    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style">Fashion &amp; Style</string>
    <string name="sorts">Sorts</string>

    <string name="sort_order">Sort Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>

    <string-array name="sort_order_array">
        <item>none</item>
        <item>newest</item>
        <item>oldest</item>
    </string-array>

    <string name="no_data">NO DATA\n\nSEARCH AGAIN\nor CHANGE SETTINGS.</string>

    <string name="share">Share</string>
    <string name="save">SAVE</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
</resources>
